# depthcamerauiproject

./: .gitattributes  anothertextfilefortesting.txt  hello.txt  secondtestfile.txt
tutorial/: CMakeLists.txt  tutorial.cpp
tutorialdepth/: CMakeLists.txt  tutorialdepth.cpp
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  qtcsettings.cmake  tutorialUI
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-0d56c3a5a64fe47eb862.json  cmakeFiles-v1-592c5614fe08916e4406.json  codemodel-v2-25f708bf2ddb29fe0d17.json  codemodel-v2-482e612d9b2ccd26bc29.json  directory-.-Debug-ff76548159b3df29c1ed.json  index-2023-08-09T06-26-34-0148.json  target-tutorialUI-Debug-02bc3d8677f564ff8447.json
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-b3de136bebf7ff5ed106.json  directory-.-Debug-02364a9f5671c45be357.json  index-2023-06-20T22-41-05-0016.json  target-tutorialUI-Debug-ac49424493a1efdff371.json  target-tutorialUI_autogen-Debug-5a166abe1dac655cb963.json  target-tutorialUI_autogen_timestamp_deps-Debug-5afa1f628299293930df.json
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/.qtc_clangd/.cache/clangd/index/: QApplication.019EC30EE1489CA9.idx  QComboBox.967A61F882D11A8C.idx  QFile.CE0DE410F8BCE4D6.idx  QLabel.1D39E117016E9BE5.idx  QList.4456A2926E97A1BC.idx  QMainWindow.7D7764712C3836F8.idx  QMenuBar.BBC75BC880AC3D46.idx  QMessageBox.8596A9BFA83F3AA1.idx  QMouseEvent.5903E161F92480B5.idx  QObject.22F21A7B3D9E15F9.idx  QPushButton.6847584C94DAA007.idx  QRect.D817DCCD25E4CFFF.idx  QSize.BDC524762F5E420D.idx  QSizeF.6A326C781F4A3671.idx  QStatusBar.B1BE1F953A24F0FC.idx  QTimer.EFA00D6F2E74C100.idx  QTransform.B122514EB4B9BF3A.idx  QVariant.2DB1B32D6DA5E594.idx  QWidget.BB2C0CA936E60F8A.idx  __stddef_max_align_t.h.EA051A71F2C92773.idx  affine.hpp.427713D59C17B1C9.idx  affine.hpp.CA0C76DF34914492.idx  align.h.39AE23050B3DB93E.idx  all_indices.h.5108A2C59BEB57C2.idx  alloca.h.B3C3404035C15EA6.idx  (+464 more)
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/tutorialUI_autogen/: deps  moc_predefs.h
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/tutorialUI_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
tutorialui/build-tutorialUI-Desktop_Qt_6_5_1_GCC_64bit-Debug/tutorialUI_autogen/include/: ui_mainwindow.h
tutorialui/tutorialUI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
